// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BRAA draws_correctly 1`] = `
<canvas
  data-snapshot-image="2fa03e599e754d193afff565d0cf67c55a086dcce5457bd7ea670e923bbf92e6e62b68f2271cd05a6885a00ccd0cb9abe5fd29112d0248d527da13d664b6f929"
  height="20"
  width="50"
/>
`;

exports[`BRAA draws_only_when_showmeasure_true 1`] = `
<canvas
  data-snapshot-image="b1d8cbcb5a6ffd8ce5a2c09313915fc32fc4a6a58051261790b714fd68d45183b4257742c1ffdc3d24f52aeb7a34a50d5b5e0e68c3b66f96c49a28e4e42433bc"
  height="20"
  width="50"
/>
`;
